# PDI-NOMAD-Oasis-image

./: Dockerfile  README.md  docker-compose.yaml  nomad.yaml  plugins.txt  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nomad.yaml
