[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.4.0",
  "setuptools",
]


[project.optional-dependencies]
plugins = [
  # "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git@b29cbbd808a6c9c0c45cdd10c6e7982375342d9f",
  # "nomad-porous-materials @ git+https://github.com/FAIRmat-NFDI/nomad-porous-materials.git@522f4a3208077f534f1c5e886527ee2104283d0b",
  # "nomad-aitoolkit @ git+https://github.com/FAIRmat-NFDI/nomad-aitoolkit.git@b203f8eb28dc4b6771a39d5c5b7ad3d9d8583ac8",
  # "nomad-simulations==0.0.1",
  # "pynxtools[convert]==0.5.0",
  # "nomad-schema-plugin-run>=1.0.1",
  # "nomad-schema-plugin-simulation-workflow>=1.0.1",
  # "nomad-normalizer-plugin-bandstructure>=1.0",
  # "nomad-normalizer-plugin-dos>=1.0",
  # "nomad-normalizer-plugin-soap>=1.0",
  # "nomad-normalizer-plugin-spectra>=1.0",
  # "nomad-normalizer-plugin-system>=1.0",
  # "nomad-normalizer-plugin-simulation-workflow>=1.0",
  # "eelsdbconverter @ git+https://github.com/nomad-coe/nomad-parser-eelsdb.git@entry-point",
  # "nomad-parser-plugins-electronic>=1.0",
  # "nomad-parser-plugins-atomistic>=1.0",
  # "nomad-parser-plugins-workflow>=1.0",
  # "nomad-parser-plugins-database>=1.0",
  "nomad-measurements @ git+https://github.com/FAIRmat-NFDI/nomad-measurements.git@c297d6b4fb3faa47a6a9076d031310f8d3dbe256",
  "nomad-material-processing @ git+https://github.com/FAIRmat-NFDI/nomad-material-processing.git@38edad53b1d78010a6e77590e2ba178a7f9fb99d",
  "nomad-analysis @ git+https://github.com/FAIRmat-NFDI/nomad-analysis.git@cc602021f95ad5b1bc921c6835e76561d28f0e76",
  "epic_scraper @ git+https://github.com/PDI-Berlin/EPIC_scraper@debd18363ed900eb16843e6c7614f81d49cb32f6",
  "statsmodels",
  "pdi-nomad-plugin @ git+https://github.com/glaidedata/pdi-nomad-plugin.git@39ba26312bd690eefb74ce546bb8391a2213fe63", # git+https://github.com/PDI-Berlin/pdi-nomad-plugin.git@5f6bab168d2c6f7a246051f11e013ae531d01bcf",
  # "nomad_ikz_raman @ git+https://github.com/IKZ-Berlin/IKZ_raman.git@797a36fa985412e00527d4298f763eb2318a3ec4",
  "plotly<6.0.0",
]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
# The prerelease key likely refers to a setting that controls how 
# prerelease versions of dependencies are handled. 
# Prerelease versions are typically used for testing and may not be stable, 
# so this setting could be useful in ensuring only stable versions are used in the project.
prerelease = "allow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
